css/board.css
.content {
    padding-left: 32px;
    padding-right: 32px;
    background-color: #F6F7F8;
    max-width: 1920px;
    overflow-x: hidden;
    font-family: Inter;
}

h1 {
    font-size: 64px;
}

body {
    min-height: 100vh;
}

.board-headline {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 48px;
}

.add-task-button-mobile {
    display: none !important;
    background-color: #2A3647;
    color: white;
    width: 40px;
    height: 40px;
    border-radius: 8px;
    padding: 3px;
    text-align: center;
    align-content: center;

}

.add-task-button-mobile img {
    width: 20px;
    height: 20px;
}

.add-task-section {
    display: flex;
    border-radius: 8px;
    align-items: center;
    gap: 24px;
}

.input-task {
    width: 245px;
    font-size: 16px;
    background-color: transparent;
    padding: 8px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 48px;
    cursor: pointer;
    outline: #29ABE2;
    border: none;
    flex: 1;
}

.form-for-input {
    position: relative;
    width: 317px;
}

.search-task-input-field {
    border: 1px solid #A8A8A8;
    display: flex;
    align-items: center;
    border-radius: 8px;
}

.form-for-input img {
    width: 18px;
    height: 18px;
}

.search-task-input-field img:hover {
    filter: brightness(0) saturate(100%) invert(57%) sepia(96%) saturate(1284%) hue-rotate(165deg) brightness(93%) contrast(89%);
}

.search-task-input-field:focus-within {
    border-color: #29ABE2;
}

.search-button-container {
    border: none;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    background: transparent;
    width: 48px;
    height: 48px;
    padding: 0;
}

.add-task-button {
    background-color: #2A3647;
    color: white;
    padding: 8px 16px;
    display: flex;
    align-items: center;
    border-radius: 8px;
    height: 48px;
    gap: 8px;
    font-weight: bold;
    cursor: pointer;

}

.add-task-button:hover {
    background-color: #29ABE2;
}

.add-task-button img {
    width: 16px;
    height: 16px;
}

.add-task-button-mobile:hover {
    background-color: #29ABE2;
}


/* Board */

.board-distribution {
    display: flex;
    position: relative;
}

.row {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.column {
    width: 256px;
    margin-bottom: 24px;
}

.empty-task {
    border: 1px dashed #A8A8A8;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #A8A8A8;
    height: 256px;
    min-width: 100px;
}

.column-headline {
    display: flex;
    width: 256px;
    justify-content: space-between;
    color: #2A3647;
    margin-bottom: 12px;
}

.column-headline img:hover {
    filter: brightness(0) saturate(100%) invert(57%) sepia(96%) saturate(1284%) hue-rotate(165deg) brightness(93%) contrast(89%);
    cursor: pointer;

}

.column-container {
    display: flex;
    flex-direction: column;
    gap: 16px;
    position: relative;
    min-height: 54px;
}

.task {
    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.08);
    text-wrap: wrap;
    background-color: white;
    border-radius: 8px;
    padding: 16px;
    display: flex;
    flex-direction: column;
    cursor: pointer;
    user-select: none;
}

.task-cat-user {
    margin-bottom: 24px;
}

.task-cat-user p {
    background-color: #0038FF;
    padding: 4px 24px;
    border-radius: 8px;
    color: white;
    width: fit-content;
    margin: 0;
}

.task-cat-technical {
    margin-bottom: 24px;
}

.task-cat-technical p {
    background-color: #1FD7C1;
    padding: 4px 16px;
    border-radius: 8px;
    color: white;
    width: fit-content;
    margin: 0;
}


.task-title {
    margin-bottom: 8px;
}

.task-title span {
    font-weight: bold;

}

.task-description {
    margin-bottom: 24px;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 100%;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    white-space: normal;
    color: #A8A8A8;
}

.progress {
    display: flex;
    justify-content: space-between;
    font-size: 12px;
}

.progress progress::-webkit-progress-bar {
    background-color: #F4F4F4;
    border-radius: 4px;
}

.progress progress::-webkit-progress-value {
    background-color: #4589FF;
    border-radius: 4px;
}

.progress progress {
    width: 128px;
    margin-bottom: 24px;
    -webkit-appearance: none;
    appearance: none;
    height: 8px;

}

.task-footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.task-users {
    display: flex;
}


.user {
    width: 32px;
    height: 32px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: aqua;
    color: white;
    border-radius: 50%;
    margin-left: -8px;
    font-size: 12px;
}

.height-unset {
    height: unset !important;
}

.overflow-hidden {
    overflow: hidden;
    overflow-y: hidden;
    overflow-x: hidden;
}

/* .edit-scrolling-scrollbar {
    max-height: 100vh;
    overflow-y: auto;
    padding: 0 5px 0 0;
    scrollbar-gutter: stable;
    margin-right: -20px;
} */

.lock-layout {
    min-width: 1000px;
    /* oder was dein Layout braucht */
}

@media (max-width: 600px) {
    .lock-layout {
        min-width: 600px;
        /* kleinere Min-Width für Handy */
    }
}

